syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ravi.server.gprc";

package gprc;

service HelloWorldService {
  rpc hello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string text = 1;
}

message HelloResponse {
  string text = 1;
}
